# TrajBridge

./: .gitignore  .gitmodules  LICENSE  README.md  environment.yml
SimpleController/: setup.py  test.ipynb
SimpleController/scripts/: spline2attitude_node copy.py  spline2attitude_node.py  spline2position_node.py
SimpleController/src/: min_snap.py  plot_trajectory.py  record_flight.py  trajectory_helper.py
SimpleController/trajectories/: bank_left.json  bank_right.json  climb.json  hover.json  hover_high.json  hover_low.json  hover_mid.json  line.json  orbit.json  rotate.json  search.json  slide.json  square.json
SplineController/: setup.py  test.ipynb
SplineController/scripts/: spline2position_node.py  spline2velocity_node.py
SplineController/src/: generate_data.py  generate_min_snap.py  plot_trajectory.py  trajectory_helper.py
SplineController/trajectories/: bank_left.json  hover.json  line.json  orbit.json  rotate.json
Tools/: README.rst
Tools/scripts/: aether-2.sh  env.sh  hosts  restart_drone_services.sh  roslaunch_drone  shutdown_drones.sh  trajbridge.service  trajbridge.sh
TrajBridge/src/px4_comm/: CMakeLists.txt  package.xml
TrajBridge/src/px4_comm/include/px4_comm/: cpp_sample_node.hpp
TrajBridge/src/px4_comm/launch/: mocap.launch.py  spline2position.launch.py  spline2velocity.launch.py  trajbridge.launch.py
TrajBridge/src/px4_comm/msg/: SampleMsg.msg
TrajBridge/src/px4_comm/px4_comm/: ball_timer.py  offboard_controller.py  states_modes.py
TrajBridge/src/px4_comm/scripts/: mocap_node.py  spline2position_node.py  spline2velocity_node.py  state_machine_node.py
TrajBridge/src/px4_comm/src/: cpp_sample_node.cpp
devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
install/: local_setup.sh  setup.sh
log/: latest_build
logs/bridge-px4/: build.check.001.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr
logs/bridge_px4/: build.check.000.log.stderr  build.make.005.log.stderr  build.make.006.log.stderr  build.make.008.log.stderr  build.make.010.log.stderr  build.make.011.log.stderr  build.make.014.log.stderr  build.make.015.log.stderr  build.make.017.log.stderr  build.make.018.log.stderr  build.make.022.log.stderr  build.make.026.log.stderr  build.make.027.log.stderr  build.make.028.log.stderr  build.make.029.log.stderr  build.make.030.log.stderr
scripts/: roslaunch_drone.service
src/: .rosinstall
src/bridge-px4/: CMakeLists.txt  package.xml
src/bridge_iroad/: CMakeLists.txt  package.xml
src/bridge_px4/: CMakeLists.txt  NatNet_SDK_4.0_ubuntu.tar  package.xml  setup.py
src/bridge_px4/include/bridge_px4/: GCS.h  GCSRogue.h  GCSVel.h  GCSVelTraj.h  auto_rc.h  frame_transforms.h  gcs.h  homing_pose.h  hr_control.h  mocap_gen.h  mocap_gps.h  mocap_vel.h  offboard_control.h  pid.h  setpoint_publisher.h  setpoint_publisher_node.h  sp_pos_e_node.h  sp_pos_t_node.h  velocity_controller.h  visualizer.h
src/bridge_px4/launch/: controller.launch  core.launch  core_mrping.launch  drone.launch  drone1.launch  drone1_sitl.launch  drone2.launch  drone3.launch  drone4.launch  drone5.launch  drone6.launch  drone_br.launch  drone_controller.launch  drone_old.launch  gcs.launch  gcs_e.launch  gcs_pos.launch  gcs_rogue.launch  gcs_sim.launch  gcs_t.launch  gcs_vel.launch  gcs_vel_traj.launch  gcsrogue_pos.launch  homing_pose.launch  main.launch  mocap_vel.launch  quad.launch  record.launch  rogue.launch  sitl.launch
src/bridge_px4/launch/old/: controller.launch  gcs_vel.launch  gcs_vel_traj.launch  rc_sim.launch  record.launch  rviz.launch
src/bridge_px4/msg/: FlatSpline.msg  TrajUpdate.msg
src/bridge_px4/nodes/: gcs.py
src/bridge_px4/rviz/: default.rviz  drone1.rviz  drone2.rviz  drone3.rviz  drone4.rviz  drone5.rviz  drone6.rviz
src/bridge_px4/scripts/: LED_UI.py  traj_plot.py
src/bridge_px4/src/: GCS.cpp  GCSRogue.cpp  GCSVel.cpp  GCSVelTraj.cpp  auto_rc.cpp  controller.py  gcs.cpp  gcs.py  gcs_node.cpp  gcs_rogue.py  homing_pose.cpp  hr_control.cpp  line.csv  mocap_gen.cpp  mocap_gps.cpp  mocap_vel.cpp  offb_node.cpp  offboard_control.cpp  pid.cpp  rogue.py  setpoint_publisher.cpp  setpoint_publisher_node.cpp  setpoint_transform.py  sp_pos_e_node.cpp  sp_pos_t_node.cpp  test.py  test_node.cpp  velocity_controller.cpp  visualizer.cpp
src/bridge_px4/src/dnn/: dnns.py  motNN.pth  polNN_0htr30hrz_300eps.pth  polNN_10htr30hrz_300eps.pth  polNN_5htr30hrz_p1_1000eps.pth
src/bridge_px4/src/lib/: frame_transforms.cpp
src/bridge_px4/srv/: ActACMode.srv  CommandTemplate.srv  GcsCmd.srv  SendTX.srv  SendXU.srv  SetACMode.srv  SetSPMode.srv  TrajTransfer.srv  TrigAC.srv  TxTraj.srv  traj_transfer.srv
src/bridge_px4/trajectories/: Dropped Text.txt  basic.csv  circle.csv  climb.csv  hover.csv  inft.csv  large_circle.csv  large_circle_rise.csv  line.csv  line_bf.csv  line_grp_drone1.csv  line_grp_drone2.csv  line_grp_drone3.csv  line_grp_drone4.csv  line_grp_drone5.csv  line_grp_drone6.csv  long_line.csv  long_line_slow.csv  md-left.csv  od_line.csv  orbit.csv  selfie.csv  slow_md-left.csv  square2.csv  square_1.csv  square_grp.csv  square_grp_drone1.csv  square_grp_drone2.csv  square_grp_drone3.csv  square_grp_drone4.csv  square_grp_drone5.csv  square_grp_drone6.csv  square_grp_tight.csv  square_relative.csv  square_relative_large.csv  square_relative_small.csv  takeoff.csv  traj999.json  traj_1dr60s.csv  traj_1dr60s_012523.csv  (+21 more)
src/ros2_comm/: CMakeLists.txt  package.xml
src/ros2_comm/launch/: trajbridge.launch.py
src/ros2_comm/ros2_comm/: flight_logger.py  offboard_controller.py  states_modes.py
src/ros2_comm/scripts/: setpoint_position.py  state_machine.py
trajectories/: takeoff.csv
(+2005 files in other folders)
