<?xml version="1.0"?>
<package format="2">
  <name>bridge_px4</name>
  <version>0.0.0</version>
  <description>The bridge_px4 package</description>
  <maintainer email="jelow@stanford.edu">lowjunen</maintainer>
  
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
